Attempted fix for alignment issue in portfolio header on chrome for iOS

--- a/css/app.css
+++ b/css/app.css
@@ -4118,7 +4118,8 @@ footer {
       display: block;
       font-weight: bold;
       transition: 250ms ease;
-      text-align: left; }
+      text-align: left;
+      vertical-align: middle; }
       @media screen and (min-width: 0em) and (max-width: 39.9375em) {
         .portfolio-section .portfolio-item .portfolio-item-header {
           font-size: 0.8125rem; } }
